# ogclews-link

./: .gitignore  .review_tmp_grm.py  .review_tmp_rm.py  .review_tmp_shape.py  AGENTS.md  DATA.md  NEW-CHANNELS-FEASIBILITY.md  README.md  STATUS.md  TESTING.md  VALIDATION.md  ogclews_countries.example.json  pyproject.toml
docs/: test-plan.md
docs/design/: INTEGRATION-HANDOFF.md  README.md  capital-intensity-gamma-lever.md  emissions-to-health-dose-response.md  energy-as-production-input-spec.md  energy-price-transmission.md  og-clews-denovo-analysis.md  ogcore-clews-integration-synthesis-report.md  ogcore-clews-integration-worklog.md  results-visualization-plan.md  scenario-builder-and-policy-levers.md  scenario-catalog.md  scenario-creation-ux.md  scenario_catalog.yaml  viz-style-guide.md
experiments/: diagnose_health.py  exp01_demand_response.py  plot_golden_summary.py  regen_figures.py  run_across_steps.py  run_battery.py  run_capital_intensity.py  run_energy_itc.py  run_energy_price_comparison.py  run_io_calibrated_energy_shock.py  seam_roundtrip.py  solve_health_variants.py  sweep_mortality.py  test_builtin_pop.py  test_health_bidirectional.py  test_policy_levers.py  validate_health.py
exploration/: README.md  channel-space-map.md
exploration/findings/: 2026-06-adversarial-critique.md  2026-06-feasibility-v1.md  2026-07-drop1-coupling-spec.md  clews-surface.md  idea-01-clews-run-seam.md  idea-02-loop-controller.md  idea-03-demand-rebuild.md  og-core-surface.md
ogclews_link/: __init__.py  _calibration.py  _demog.py  aggregation.py  channels.py  clews_driver.py  clews_io.py  clews_signal.py  cli.py  contract.py  country.py  discovery.py  energy_calibration.py  experiments.py  figures.py  framework.py  golden.py  health_pop.py  health_profile.py  io_energy_passthrough.py  iterate.py  lcoe.py  manifest.py  models.py  muiogo_run.py  og_runner.py  og_wedge.py  policy_levers.py  progress.py  registry.py  report.py  report_html.py  runtime.py  scenario_catalog.json  scenario_catalog.py  serde.py  signals.py  solve_log.py  style.py  viz_composition.py  (+7 more)
paper/: README.md  main.tex  preamble.tex  references.bib
paper-intro/: .gitignore  main.tex
presentation/: .gitignore  CHANNEL-MECHANISMS.md  EXPLANATION.md  NARRATIVE.md  README.md  build.sh  channel-diagrams.html  diagram-energy-price.html  mechanisms-reference.tex  mechanisms.html  mechanisms.tex  ogclews-link.tex  slides.tex
results/: README.md  golden.json
scripts/: setup.sh  test-drive.sh
tests/: test_aggregation.py  test_channels.py  test_clews_driver.py  test_clews_io.py  test_concordance.py  test_coupled_deck.py  test_discovery.py  test_golden.py  test_muiogo_registry.py  test_onboarding.py  test_policy_lever_rebase_guard.py  test_registry.py  test_scenario_catalog.py  test_serde.py  test_solve_log.py  test_viz.py  test_windows_portability.py
(+60 files in other folders)
